--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Lemoncode",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.11.4",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -27,6 +28,7 @@
     "@mui/material": "^5.14.10",
     "axios": "^1.5.0",
     "formik": "^2.4.5",
+    "graphql": "^16.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
